--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><body><div style="color: green">(.)(.)</div></body></html>
+<html><body><div style="color: green; font-size: 18pt">(.)(.)</div></body></html>
